<resources>
    <string name="app_name">Fit Li Route GPS</string>

    <string name="home_menu">Home</string>
    <string name="setting_menu">Setting</string>
    <string name="tracks">Tracks</string>

    <string name="location">LOCATION SETTINGS</string>
    <string name="truck_color">Track color</string>
    <string name="truck_color_summary">Choose track color</string>
    <string name="update_time">Update Time</string>
    <string name="update_time_summary">Location update time </string>
    
    <string name="location_disabled">Location disabled</string>
    <string name="location_dialog_message">Do you want enabled GPS?</string>
    <string name="location_bnt_yes">Yes</string>
    <string name="location_bnt_no">No</string>
    <string name="play_btn">play</string>
    <string name="myLocation">MyLocation</string>

    <string name="tvTime">Time:</string>
    <string name="distanceLabel">Distance:</string>
    <string name="velocityLabel">Velocity:</string>
    <string name="avVelocityLabel">Average Velocity:</string>
    <string name="save_this_track_dialog">Save this track?</string>
    <string name="time_dialog">Time:</string>
    <string name="velocity_dialog">Velocity:</string>
    <string name="distance_dialog">Distance:</string>
    <string name="save_dialog_btn">Save</string>
    <string name="cancel_dialog_btn">Cancel</string>
    <string name="time_00_24_24_fake">Time: 00:00:00</string>
    <string name="average_velosity_3_5_km_h_fake">Average velosity: 0.0 kmh</string>
    <string name="velosity_3_5km_h_fake">Velosity: 0.0 km/h</string>
    <string name="distance_16_5_km_fake">Distance: 0.0 km</string>
    <string name="fragment_settings_fake">FRAGMENT SETTINGS</string>
    <string name="fragment_tracks_fake">FRAGMENT TRACKS</string>
    <string name="fragment_view_track_fake">FRAGMENT VIEW TRACK</string>
    <string name="truck_color_category">Track Color</string>
    <string name="update_time_category">Update Time</string>
    <string name="empty">EMPTY</string>
    <string name="date_02_03_2023">Date: 02.03.2023</string>
    <string name="_02_03_2023_9_00">02.03.2023 9:00</string>
    <string name="_6_7_km">Distance:6.7 km</string>
    <string name="speed_3_4_km_h">Speed: 0.0 km/h</string>
    <string name="speed">Speed</string>
    <string name="timer_des">timer_des</string>
    <string name="time_00_00_00_m">Time: 00:00:00 m</string>
    <string name="delete">delete</string>

</resources>